@@ -1,3 +1,7 @@
+2010-11-26  Julien Danjou  <julien@danjou.info>
+
+	* color.el: Rename various rgb functions to srgb.
+
 2010-11-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-get-groups): Allow non-quoted strings as mailbox
